--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node lab06/app.js"
   },
   "author": "Sandeep Giri",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "rxjs": "^6.5.1"
   }
 }
