reveal secret message app

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lab06": "node lab06/app.js",
     "secret": "node lab07/secret-message/app.js"
   },
   "author": "Sandeep Giri",
