--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "author": "Sandeep Giri",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
     "moment": "^2.24.0",
+    "morgan": "~1.9.1",
     "rxjs": "^6.5.1"
   }
 }
